# pyaligner

./: .gitignore  .readthedocs.yaml  README.md  README.private.md  dist_package.sh  docs_requirements.txt  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: add_assets.yml  python-publish.yml  python_publish.yml
docs/: create_docs.sh  requirements.txt
docs/scripts/: pre_install.sh
docs/source/: conf.py  index.rst  install.rst  user_guide.rst
install/: PyAligner-Linux-x86_64.sh  PyAligner-MacOSX-x86_64.sh
pyaligner/notebooks/: first.ipynb
pyaligner/scripts/: aligner.py  aligner_thread.py  gui.py  gui_old.py  gui_thread.py
pyaligner/utils/: utils.py
