[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'pyaligner'
version = '0.1.0'
authors = [
    {name='Ãlvaro Ramajo-Ballester', email='aramajo@ing.uc3m.es'},
]
description = 'Automatic audio transcriptor and audi-text aligner'
readme = 'README.md'
# requires-python = '>=3.8,<3.10'
requires-python = '>=3.7'
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Natural Language :: English',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    # 'Operating System :: Microsoft :: Windows',
]

keywords = [
    'python',
    'pytorch',
    'deep-learning',
    'audio',
    'audio-transcription',
    'audio-text-alignment'
]

dependencies = [
    'openai-whisper',
    'montreal-forced-aligner',
    # 'PyQt5',
    # 'pyqt'
]

[project.optional-dependencies]
dev = [
    'ipykernel',
    # 'pyqt',
    'twine',
    'build',
]

docs = [
    'sphinx==7.1.2',
    'sphinx_rtd_theme==1.3.0',
    'sphinx-copybutton==0.5.1',
    'sphinx-markdown-tables==0.0.17',
    'sphinx-tabs',
    'numpydoc==1.5.0',
    'myst-parser==2.0.0',
]
full = ['pyaligner[dev,docs]']

[tool.setuptools.packages]
find = {namespaces = false, exclude = ['docs']}

[project.scripts]
pyaligner = "pyaligner.scripts.aligner:main"


[project.urls]
'Homepage' = 'https://github.com/ramajoballester/pyaligner'
'Bug Tracker' = 'https://github.com/ramajoballester/pyaligner/issues'